apps/base/media/qbittorrent/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: qbittorrent
spec:
  selector:
    app: qbittorrent
  ports:
  - port: 8081
    targetPort: 8081
  type: NodePort
